docs: record Phase 4/5 results, test debt, and Liberty target (Phase 5)
- Phase 4: core (238) and a4j (119) unit tests green on JDK 21; documented the
  four JDK-modern test fixes (cglib add-opens, sun.util.calendar, JAXB runtime,
  a4j default-compile). rich test-source compilation debt tracked.
- Phase 5: all 6 library artifacts (javax + jakarta variants) are built and
  installed in ~/.m2 and usable. Documented two environmental/tooling build
  flakes when rebuilding rich from scratch: Windows file locks on target/, and
  the resource-optimizer's Reflections 0.9.8 not reading Java 21 bytecode
  reliably (non-fatal, produces optional packed JS/CSS). Both tracked as debt.
- Added section 11: how to consume the library from a Java 21 + WebSphere
  Liberty webapp (which artifact per Faces feature, JAXB runtime requirement,
  provided-scope container APIs, and a mini-project checklist).